{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0fbd9d37-e615-4796-9bec-808e1f7359c2",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "e4accdc5-635a-4f81-83e6-4d7888fda0f4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "crouch",
                    "type": "Button",
                    "id": "a9037ae2-f278-4dfc-81c1-33129f3a2d11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "sprint",
                    "type": "Button",
                    "id": "5e8ddd50-8f5b-49ab-80ce-551ded393671",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "f3ff87b7-0583-4b05-b7f9-2a189bd829d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "attack",
                    "type": "Button",
                    "id": "97787db4-06fa-4ef9-9148-2d04efa54bec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "chargeCancel",
                    "type": "Button",
                    "id": "6e187df2-4953-4cf0-ba5a-1c2fc1708596",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "reset",
                    "type": "Button",
                    "id": "f5ecaa91-2ae3-4ad8-a78f-4c71a240c4ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "menuOpen",
                    "type": "Button",
                    "id": "c9c00ebf-2ee1-4077-a615-a8d62d94756c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "interact",
                    "type": "Button",
                    "id": "679c4bbf-b38a-4a08-a054-aa4ff5251b27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "cbc20105-00e7-4483-a7ab-8193a0910eb8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "95a99316-47e5-40d0-9073-0c5179d3782a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "b04ce829-1e92-4b88-a6f1-45edcf96c705",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamePad",
                    "id": "c3dd98ab-2cd3-4de6-ad04-1344946c7e98",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "3d268015-6ab1-4b74-9792-e6b59622955f",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;TouchPanel",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "53120fce-36b4-4f53-9e45-2ba2289c3c4a",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;TouchPanel",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ac140940-483e-44b3-852e-a8a6e912cc03",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f71d1972-3850-4bd3-9f10-6bc20d6acfe7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;TouchPanel",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cfb1da2-8994-49da-90e0-2985d131be3d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fcf7922-8689-4f4f-93d4-6db9830ce3ea",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;TouchPanel",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "794d2b7b-e427-4bd9-b0ef-86b55d14dfee",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "chargeCancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b7a15ac-4ca0-48b6-88bf-bee27e04e3af",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;TouchPanel",
                    "action": "reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff6ddf24-1fc7-48e1-9efe-209c4fdce49a",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62ca2446-47e8-48ec-8400-e70afb9f5777",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "menuOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1177ea2d-04e6-4267-b83c-ce5575363db9",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;TouchPanel",
                    "action": "menuOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "467f5281-7fd7-4164-9084-55980067c9b6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aae00b7c-000c-4d04-935d-fe033ae4eed5",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;TouchPanel",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8b7f217-2bc7-430b-a914-37998a161a23",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcf9b43f-336c-4a32-b1b7-c29015a460b7",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad;TouchPanel",
                    "action": "crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d361b14-b79f-457a-9c49-061dda2ac06d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard & Mouse",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edbf2213-62dc-4434-a73e-a688bd47b13d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e71b256a-74b5-4e40-9b69-0d5e81161626",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.6)",
                    "groups": "TouchPanel",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1766076b-a4c6-4891-8912-d864b680b8f1",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.6)",
                    "groups": "TouchPanel",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard & Mouse",
            "bindingGroup": "KeyBoard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "TouchPanel",
            "bindingGroup": "TouchPanel",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}